--- a/app/src/main/res/menu/top_app_bar_menu.xml
+++ b/app/src/main/res/menu/top_app_bar_menu.xml
@@ -4,14 +4,16 @@
 
 
     <item
-        android:id="@+id/search"
+        android:id="@+id/search_menu_item"
         android:icon="@drawable/ic_baseline_search_24"
         android:title="검색"
         android:contentDescription="사진을 검색한다."
-        app:showAsAction="ifRoom" />
+        app:showAsAction="ifRoom|collapseActionView"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
+        />
 
     <item
-        android:id="@+id/more"
+        android:id="@+id/more_menu_id"
         android:title="더보기"
         android:icon="@drawable/ic_baseline_more_vert_24"
         android:contentDescription="더보기 메뉴"
