--- a/app/src/main/res/layout/activity_photo_collection.xml
+++ b/app/src/main/res/layout/activity_photo_collection.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".PhotoCollectionActivity">
+    tools:context=".activities.PhotoCollectionActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
