--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,8 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <!-- ?attr/back -->
+        <item name="colorControlHighlight">@color/colorPrimary</item>
     </style>
 
     <style name="MyRadioButton" parent="Widget.MaterialComponents.CompoundButton.RadioButton">
